# Apollo_health

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  apollo  azure-pipelines.yml  build-constraints.txt  models.azure-pipelines.yml  package.json  pre-commit-config.yaml  pyproject.toml  sandbox.azure-pipelines.yml  script.py  test.json  wp scraper.md
.azure-pipelines/: source-hub.deploy.yml  source-hub.validate.yml  sourcehub-app.build.yml  sourcehub-base.build.yml  sourcehub-models.build.yml  sourcehub-models.deploy.yml  sourcehub-taskworker-sync.build.yml
Docker/: app.Dockerfile  base.Dockerfile  dev.Dockerfile  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-prod.yaml  elasticmq.conf
backend/app/: app.py  main.py  newrelic.ini
backend/app/core/: settings.py
backend/app/routes/: app_config.py  assessments.py  auth.py  change_log.py  comments.py  content_extraction_tasks.py  devtools.py  doc_documents.py  document_family.py  document_family_test.py  document_sample_creator.py  document_sample_creator_test.py  documents.py  documents_test.py  lineage.py  lineages.py  payer_backbone.py  payer_family.py  proxies.py  site_scrape_tasks.py  site_scrape_tasks_test.py  sites.py  sites_test.py  stats.py  table_query.py  table_query_test.py  task.py  test_documents.py  test_sites.py  therapy_master.py  translations.py  users.py  work_queues.py
backend/app/scripts/: Set 1 Load Files_v1.xlsx  add_user.py  cleanup_location_base_urls.py  create_pipeline_registry.py  create_proxy_records.py  create_work_queues.py  default_indications_and_terms.csv  ensure_indices.py  explore_refinding_document.py  load_default_indications.py  load_payer_backbone.py  payer_backbone.xlsx  preload_families.py  rectify_last_scrape_data.py  retag_document.py
backend/app/templates/: login.html  request-access.html
backend/app/utils/: auth0.py  cors.py  http_logger.py  logger.py  logging.py  security.py  test_user.py  uploads.py  user.py
backend/cli/: data.py  date_parser.py  db.py  doc_type.py  lineage.py  main.py  par.py  text_parser.py  tsa.py
backend/common/core/: config.py  enums.py  log.py  redis_client.py
backend/common/db/: init.py  migrations.py  settings.py
backend/common/events/: event_convert.py  send_event_client.py  settings.py  sqs_client.py
backend/common/models/: __init__.py  app_config.py  base_document.py  change_log.py  comment.py  config.py  content_extraction_task.py  doc_document.py  document.py  document_analysis.py  document_assessment.py  document_family.py  document_mixins.py  indication.py  lineage.py  link_task_log.py  payer_backbone.py  payer_family.py  pipeline.py  proxy.py  search_codes.py  shared.py  site.py  site_scrape_task.py  site_scrape_task_log.py  tag_comparison.py  task_log.py  tasks.py  translation_config.py  user.py  work_queue.py
backend/common/repositories/: doc_document_repository.py  doc_document_repository_test.py
backend/common/services/: collection.py  diff_utilities.py  doc_document.py  document.py  document_analysis.py  lineage.py  lineage_matcher.py  lineage_matcher_test.py  lineage_test.py  payer_family.py  site.py  site_scrape_task.py  stats.py  tag_compare.py  tag_compare_test.py  tasks.py
backend/common/sqs/: base_task_queue.py  core.py  lineage_task.py  lineage_task_queue.py  pdf_diff_task.py  pdfdiff_task_queue.py  task_processor.py  task_queue.py
backend/common/storage/: async_text_handler.py  client.py  hash.py  hash_test.py  s3_client.py  settings.py  test_extraction.py  text_extraction.py  text_extraction_test.py  text_handler.py  text_handler_test.py
backend/common/task_queues/: unique_task_insert.py
backend/lineageworker/: main.py  newrelic.ini
backend/parseworker/: extract_worker.py  extractor.py  extractor_test.py  main.py  newrelic.ini  rxnorm_entity_linker_model.py
backend/pdf_diff_task/: main.py
backend/pdfdiff/: main.py
backend/pdfdiffworker/: main.py
backend/scheduler/: main.py  test_cron_matching.py  test_scaler.py  test_scheduler.py
backend/scrapeworker/: aio_downloader.py  date_parser_test.py  detect_lang.py  doc_type_classifier.py  doc_type_matcher.py  doc_type_matcher_test.py  downloader.py  effective_date.py  log.py  main.py  newrelic.ini  playbook.py  proxy.py  rate_limiter.py  scrape_task.py  scrape_worker.py  search_crawler.py  searcher.py  test_detect_lang.py  test_retrier.py  xpdf_wrapper.py
backend/taskworker/: main.py
backend/taskworker_sync/: Dockerfile  README.md  local.env  main.py  requirements.txt  sample_event.json
deploy/live/: .terraform.lock.hcl  main.tf  provider.tf  terragrunt.hcl  variables.tf
docs/: DEVELOPMENT.md  TROUBLESHOOTING.md  reactdatagrid.md
frontend/: .env.sample  .gitignore  _.env  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  data-grid.css  index.css  index.tsx  react-app-env.d.ts  settings.ts  setupProxy.js  setupTests.ts
mock_html/: default.conf  static.conf
scripts/: README.md  clear-prev-par-ids.js  clear-proxies.js  clear-records.js  delete-migration.sh  mongo.sh  mongodump.sh  mongorestore.sh  poetry.sh  profiler.js  reset-local.sh  reset.js  s3-fetch.sh
(+718 files in other folders)
